--- a/React Files/src/components/GameCard/GameCard.css
+++ b/React Files/src/components/GameCard/GameCard.css
@@ -2,8 +2,6 @@
     background: #fff;
     border-radius: 2px;
     height: 150px;
-    margin: 1rem;
-    position: relative;
     box-shadow: 0 3px 6px #999, 0 3px 6px #999;
     text-align: left;
   }
@@ -12,11 +10,14 @@
     height: 100%;
     overflow: hidden;
     text-align: center;
-    background:#6CADDC;
+
   }
   .card > .img-container > img {
     width: 60%
   }
   
  
-  
+  img {
+    height: 150px;
+    width: 90%
+  }
