--- a/React Files/src/components/GameCard/GameCard.css
+++ b/React Files/src/components/GameCard/GameCard.css
@@ -1,6 +1,6 @@
 .card {
-    background: #fff;
-    border-radius: 2px;
+    background: black;
+    border-radius: 10px;
     height: 150px;
     box-shadow: 0 3px 6px #999, 0 3px 6px #999;
   }
@@ -17,6 +17,7 @@
   
  
   img {
+    border-radius: 15px;
     height: 150px;
     width: 90%
   }
