--- a/src/components/GameCard/GameCard.css
+++ b/src/components/GameCard/GameCard.css
@@ -2,6 +2,8 @@
     background: black;
     border-radius: 10px;
     height: 150px;
+    width: 50%;
+    margin: auto;
     box-shadow: 0 3px 6px #999, 0 3px 6px #999;
   }
   
