--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -15,10 +15,12 @@
 
 h1{
     font-family: 'Lobster', cursive;
+    color: bisque
 }
 
 p {
     font-family: 'Abril Fatface', cursive;
+    color: bisque
 }
 
 .Directions {
